--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kne/fastify-tenant",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.0",
   "description": "用于实现一个租户系统",
   "main": "index.js",
   "scripts": {
