--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kne/fastify-tenant",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "用于实现一个租户系统",
   "main": "index.js",
   "scripts": {
@@ -50,5 +50,9 @@
     "prettier": "^3.2.5",
     "qs": "^6.14.0",
     "sqlite3": "^5.1.7"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.1",
+    "lodash": "^4.17.21"
   }
 }
