--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kne/fastify-tenant",
-  "version": "1.0.0-alpha.9",
+  "version": "1.0.0-alpha.10",
   "description": "用于实现一个租户系统",
   "main": "index.js",
   "scripts": {
@@ -52,6 +52,7 @@
     "sqlite3": "^5.1.7"
   },
   "dependencies": {
+    "http-errors": "^2.0.1",
     "js-yaml": "^4.1.1",
     "lodash": "^4.17.21"
   }
